# JET3

./: makefile  pyproject.toml
JET3/: JET.py  JET3.py  RH_calibrated_UQ_coefficients.csv  RH_calibration_coefficients.csv  RH_uncalibrated_UQ_coefficients.csv  SM_calibrated_UQ_coefficients.csv  SM_calibration_coefficients.csv  SM_uncalibrated_UQ_coefficients.csv  Ta_C_calibrated_UQ_coefficients.csv  Ta_C_calibration_coefficients.csv  Ta_C_uncalibrated_UQ_coefficients.csv  calibrate_RH.py  calibrate_SM.py  calibrate_Ta_C.py  generate_RH_calibrated_UQ.py  generate_RH_uncalibrated_UQ.py  generate_SM_calibrated_UQ.py  generate_SM_uncalibrated_UQ.py  generate_Ta_C_calibrated_UQ.py  generate_Ta_C_uncalibrated_UQ.py  process_JET_table.py  sharpen_meteorology_data.py  sharpen_soil_moisture_data.py
notebooks/: Air Temperature UQ.ipynb  ECOv003 JET Accuracy with ECOv002 Cal-Val RH vs ET.ipynb  ECOv003 JET Accuracy with ECOv002 Cal-Val with Calibration.ipynb  Meteorology Calibration and ET.ipynb  Meteorology Calibration.ipynb  Meteorology Error.ipynb  Meteorology UQ Pruned.ipynb  Meteorology UQ.ipynb
