[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "JET3"
version = "3.0.1"
description = "Jet Propulsion Laboratory Evapotranspiration Ensemble ECOSTRESS Collection 3"
readme = "README.md"
authors = [
    { name = "Gregory H. Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "AquaSEBS",
    "BESS-JPL",
    "check-distribution",
    "FLiESANN",
    "GEOS5FP",
    "MODISCI",
    "numpy",
    "onnxruntime",
    "pandas",
    "PM-JPL",
    "PTJPL",
    "PTJPLSM",
    "python-dateutil",
    "pytictoc",
    "rasters",
    "SEBAL-soil-heat-flux",
    "shapely",
    "statsmodels",
    "STIC-JPL",
    "verma-net-radiation"
]

requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
    "pytest-cov",
    "jupyter",
    "twine"
]

[tool.setuptools.package-data]
ECOv003_L3T_L4T_JET = ["*.xml", "*.onnx"]

[project.urls]
"Homepage" = "https://github.com/ECOSTRESS-Collection-2/ECOv003-L3T-L4T-JET"

[tool.setuptools.packages.find]
exclude = ["notebooks*", "examples*", "debugging*", "performance*"]

[project.scripts]
ECOv003-L3T-L4T-JET = "ECOv003_L3T_L4T_JET.ECOv003_L3T_L4T_JET:main"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:numpy.ndarray size changed:RuntimeWarning",
    "ignore:The 'shapely.geos' module is deprecated:DeprecationWarning",
    # Suppress warnings from external daylight_evapotranspiration library
    "ignore:invalid value encountered in divide:RuntimeWarning:daylight_evapotranspiration"
]
